# github-actions-ensure-sha-pinned-actions

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks-dev.yaml  .pre-commit-hooks.yaml  README.md  action.yml  gha_sha_convert.py  requirements.txt  setup.cfg  test_gha_sha_convert.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  stale-pr-cleanup.yml  test.yml
