[metadata]
name = gha-sha-convert
version = 1.0.0
description = Helper tool for converting GitHub Actions to SHA-pinned versions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-c
author = Hyland
license = Appache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved ::  Appache-2.0 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gha-sha-convert = gha_sha_convert:main

[flake8]
max-line-length = 120
