[metadata]
name = gha_sha_convert
version = 1.0.0
description = Helper tool for converting GitHub Actions to SHA-pinned versions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hyland/github-actions-ensure-sha-pinned-actions
author = Hyland
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gha-sha-convert = gha_sha_convert:main

[flake8]
max-line-length = 120
